# mqtt-schema-governance-proxy

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: rules.yaml
config/schemas/: telemetry_v2.proto  temperature_v1.json
docs/: architecture.md  config_spec.md  usage.md
quarantine/: .gitkeep
scripts/: replay_quarantine.py
src/: __init__.py  audit_logger.py  config_loader.py  main.py  metrics_exporter.py  mqtt_proxy.py  quarantine_store.py  schema_validator.py  topic_validator.py  utils.py
